# workstyle

./: Cargo.toml  README.md  TODO.md  default_config.toml  workstyle.service
.github/workflows/: rust.yml
src/: config.rs  default_config.toml  default_config.yml  icon_mappings.txt  main.rs  window_manager.rs
src/tests/: issue_50.rs  mod.rs
