[package]
name = "workstyle"
version = "0.7.0"
authors = ["Pierre Chevalier <pierrechevalier83@gmail.com>"]
edition = "2021"
license = "MIT"
description = "\nWorkspaces with style!\n\nThis program will dynamically rename your workspaces to indicate which programs are running in each workspace. It uses the i3 ipc protocol, which makes it compatible with sway and i3.\n\nBy default, each program is mapped to a unicode character for concision.\n\nThe short description of each program is configurable. In the absence of a config file, one will be generated automatically.\nSee ${XDG_CONFIG_HOME}/workstyle/config.yml for  details."
homepage = "https://github.com/pierrechevalier83/workstyle"
repository = "https://github.com/pierrechevalier83/workstyle"

[dependencies]
anyhow = "1.0"
clap = { version = "3.0", default-features = false, features = ["std", "derive"] }
dirs = "3.0"
toml = "0.5"
serde = "1.0"
once_cell = "1.9"
serde_derive = "1.0"
swayipc = "3.0"
lockfile = "0.3"
signal-hook = { version = "0.3", default-features = false, features = ["iterator"] }
log = "0.4"
env_logger = "0.9"
indexmap = { version = "1.0", features = ["serde-1"] }
