[package]
name = "workstyle"
version = "0.8.2"
authors = ["Pierre Chevalier <pierrechevalier83@gmail.com>"]
edition = "2021"
license = "MIT"
description = "\nWorkspaces with style!\n\nThis program will dynamically rename your workspaces to indicate which programs are running in each workspace. It uses the i3 ipc protocol, which makes it compatible with sway and i3.\n\nBy default, each program is mapped to a unicode character for concision.\n\nThe short description of each program is configurable. In the absence of a config file, one will be generated automatically.\nSee ${XDG_CONFIG_HOME}/workstyle/config.yml for  details."
homepage = "https://github.com/pierrechevalier83/workstyle"
repository = "https://github.com/pierrechevalier83/workstyle"
exclude = ["screenshots"]

[dependencies]
dirs = "3.0.2"
env_logger = "0.9"
log = "0.4.14"
serde = "1.0"
serde_derive = "1.0"
lockfile = "0.3.0"
anyhow = "1.0"
indexmap = "1.8"
swayipc = { git = "https://github.com/pierrechevalier83/swayipc-rs.git", branch = "fix_crash_when_using_without_i3_or_sway" }


once_cell = "1.9"
toml = { "version" = "0.5.8", "features" = ["preserve_order"] }
signal-hook = { version = "0.3.13", default-features = false, features = ["iterator"] }
clap = { version = "4.0", features = ["derive", "std"] }
hyprland = { version = "0.3.1" }
itertools = "0.10.5"
